// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayProgressBar should render a completed progress bar 1`] = `
<div class="progress-group progress-success">
  <div class="progress">
    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="progress-bar" role="progressbar" style="width: 100%;"></div>
  </div>
  <div class="progress-group-addon">
    <div class="progress-group-feedback">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-check-circle">
        <title>check-circle</title>
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#check-circle"></use>
      </svg>
    </div>
  </div>
</div>
`;

exports[`ClayProgressBar should render a completed progress bar 2`] = `
<div class="progress-group progress-success">
  <div class="progress">
    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="progress-bar" role="progressbar" style="width: 100%;"></div>
  </div>
  <div class="progress-group-addon">
    <div class="progress-group-feedback">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-check-circle">
        <title>check-circle</title>
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#check-circle"></use>
      </svg>
    </div>
  </div>
</div>
`;

exports[`ClayProgressBar should render a progress bar at 0% of progress 1`] = `
<div class="progress-group progress-info">
  <div class="progress">
    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="progress-bar" role="progressbar" style="width: 0%;"></div>
  </div>
  <div class="progress-group-addon">0%</div>
</div>
`;

exports[`ClayProgressBar should render a progress bar at 0% of progress 2`] = `
<div class="progress-group progress-info">
  <div class="progress">
    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="progress-bar" role="progressbar" style="width: 0%;"></div>
  </div>
  <div class="progress-group-addon">0%</div>
</div>
`;

exports[`ClayProgressBar should render a progress bar with classes 1`] = `
<div class="progress-group progress-info my-custom-class">
  <div class="progress">
    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="progress-bar" role="progressbar" style="width: 0%;"></div>
  </div>
  <div class="progress-group-addon">0%</div>
</div>
`;

exports[`ClayProgressBar should render a progress bar with id 1`] = `
<div class="progress-group progress-info" id="myId">
  <div class="progress">
    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="progress-bar" role="progressbar" style="width: 0%;"></div>
  </div>
  <div class="progress-group-addon">0%</div>
</div>
`;

exports[`ClayProgressBar should render a progress bar with warning 1`] = `
<div class="progress-group progress-warning">
  <div class="progress">
    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="40" class="progress-bar" role="progressbar" style="width: 40%;"></div>
  </div>
  <div class="progress-group-addon">40%</div>
</div>
`;

exports[`ClayProgressBar should render an in progress bar 1`] = `
<div class="progress-group progress-info">
  <div class="progress">
    <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="40" class="progress-bar" role="progressbar" style="width: 40%;"></div>
  </div>
  <div class="progress-group-addon">40%</div>
</div>
`;
